# An-optimization-method-for-UDP

./: README.md
rudp/: main.c  rudp.c
tcp_client/: server.data
tcp_server/: CMakeCache.txt  CMakeLists.txt  Server  addressbook.proto  cmake_install.cmake
udp/: CMakeCache.txt  CMakeLists.txt  Client  Client.cpp  Makefile  ModifyData  ModifyData.cpp  Server  Server.cpp  addressbook.pb.h  cmake_install.cmake  data.json  rudp.c
udp/data/: protobuf1.data  protobuf1.json  protobuf10.data  protobuf10.json  protobuf2.data  protobuf2.json  protobuf3.data  protobuf3.json  protobuf4.data  protobuf4.json  protobuf5.data  protobuf5.json  protobuf6.data  protobuf6.json  protobuf7.data  protobuf7.json  protobuf8.data  protobuf8.json  protobuf9.data  protobuf9.json
udp_client/: CMakeCache.txt  CMakeLists.txt  Client  Client.cpp  Makefile  addressbook.pb.cc  addressbook.proto  cmake_install.cmake
udp_server/: CMakeCache.txt  Makefile  Server  Server.cpp  addressbook.pb.cc  addressbook.pb.h  cmake_install.cmake  server.data
